# modulr-agent

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.jetson  LICENSE  README.md  build.rs  package.xml
.cross/: aarch64-unknown-linux-gnu.dockerfile  armv7-unknown-linux-gnueabihf.dockerfile  x86_64-unknown-linux-gnu.dockerfile
.github/workflows/: rust.yml
apt-repo/conf/: distributions  options
modulr_agent/: Cargo.toml  README.md
modulr_agent/debian/: postinst  prerm
modulr_agent/scripts/: signaling_server.py  test_signaling_server.py
modulr_agent/src/: main.rs  video_pipeline.rs  webrtc_link.rs  webrtc_message.rs
modulr_agent/src/commands/: config.rs  initial_setup.rs  keys.rs  mod.rs  start.rs
modulr_agent/src/ros_bridge/: conversions.rs  mod.rs  ros1_bridge.rs  ros2_bridge.rs  ros_bridge_trait.rs
modulr_agent/src/webrtc_message/: agent_message.rs  mod.rs  signalling_message.rs
modulr_agent/src/webrtc_message/common/: message_envelope.rs  message_fields.rs  mod.rs  versions.rs
modulr_agent/systemd/: modulr-agent.default  modulr-agent.service
modulr_agent_common/: Cargo.toml
modulr_agent_common/src/: lib.rs
modulr_ros_messages/: Cargo.toml  build.rs
modulr_ros_messages/src/: lib.rs
modulr_webrtc_message/: Cargo.toml
modulr_webrtc_message/src/: agent_message.rs  lib.rs  signalling_message.rs
modulr_webrtc_message/src/common/: capabilities.rs  location.rs  message_envelope.rs  message_envelope_error.rs  message_fields.rs  mod.rs
modulr_zenoh_interface/: Cargo.toml  README.md
modulr_zenoh_interface/examples/: listen_frames.rs  publish_frames.rs
modulr_zenoh_interface/src/: lib.rs
scripts/: FRESH_SETUP_GUIDE.md  QUICK_START_24_04.md  ROS2_SETUP_GUIDE.md  UBUNTU_24_04_SETUP.md  camera_node.py  check_setup.sh  check_topic_availability.sh  make_creds.sh  rosbridge_fixed.launch.py  setup_ros2_ubuntu.sh  signaling_server.py  start_camera_simulation.sh  test_rosbridge_debug.py  test_rosbridge_subscription.py  test_signaling_server.py
src/: main.rs  video_pipeline.rs  webrtc_link.rs
src/commands/: config.rs  initial_setup.rs  start.rs
src/ros_bridge/: mod.rs  ros1_bridge.rs  ros2_bridge.rs  ros_bridge_error.rs  ros_bridge_trait.rs
