[package]
name = "modulr_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
webrtc = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tungstenite = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures-util = "0.3.31"
gstreamer = "0.24.2"
gstreamer-app = "0.24.2"
bytes = "1.10.1"
thiserror = "2.0.17"
env_logger = "0.11.8"
log = "0.4.28"

# ROS 1 dependencies
rosrust = { version = "0.9.12", optional = true }
rosrust_msg = { version = "0.1.8", optional = true }

# ROS 2 dependencies
rclrs = { version = "*", optional = true }
geometry_msgs = { version = "*", optional = true }
sensor_msgs = { version = "*", optional = true }
std_msgs = { version = "*", optional = true }

[features]
default = ["ros2"]
ros1 = ["dep:rosrust", "dep:rosrust_msg"]
ros2 = [
    "dep:rclrs",
    "dep:geometry_msgs",
    "dep:sensor_msgs",
    "dep:std_msgs",
]
