[package]
name = "modulr_agent"
version = "0.1.0"
edition = "2024"
description = "Modulr robot agent for WebRTC-based teleoperation"
license = "MIT"
authors = ["ModulrCloud"]
homepage = "https://github.com/ModulrCloud/modulr-agent"
repository = "https://github.com/ModulrCloud/modulr-agent"

[dependencies]
webrtc = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures-util = "0.3.31"
gstreamer = "0.24.2"
gstreamer-app = "0.24.2"
bytes = "1.10.1"
thiserror = "2.0.17"
env_logger = "0.11.8"
log = "0.4.28"
roslibrust = { version = "0.18.0", features = ["ros1", "rosbridge"] }
async-trait = "0.1.89"
futures = "0.3.31"
base64 = "0.22.1"
clap = { version = "4.5.52", features = ["derive"] }
dirs = "6.0.0"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
webpki-roots = "0.25"
rustls-native-certs = "0.6"
modulr_agent_common = { path = "../modulr_agent_common" }
modulr_webrtc_message = { path = "../modulr_webrtc_message" }
modulr_ros_messages = { path = "../modulr_ros_messages" }
modulr_zenoh_interface = { path = "../modulr_zenoh_interface", optional = true }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3.23.0"

[features]
default = ["zenoh"]
zenoh = ["modulr_zenoh_interface"]

[package.metadata.deb]
maintainer = "Modulr <dev@modulr.cloud>"
copyright = "2024-2026 Modulr"
license-file = ["../LICENSE", "0"]
extended-description = """\
Robot agent for the Modulr teleoperations platform. \
Provides WebRTC video streaming, ROS integration, and \
optional Zenoh-based video transport."""
section = "utils"
priority = "optional"
depends = "libgstreamer1.0-0, gstreamer1.0-plugins-base, gstreamer1.0-plugins-good, gstreamer1.0-plugins-bad, gstreamer1.0-plugins-ugly, gstreamer1.0-libav, libgstrtspserver-1.0-0, libges-1.0-0, libssl3 | libssl1.1, ca-certificates"
assets = [
    ["target/release/modulr_agent", "usr/bin/", "755"],
    ["../README.md", "usr/share/doc/modulr_agent/README.md", "644"],
    ["systemd/modulr-agent.service", "lib/systemd/system/modulr-agent.service", "644"],
    ["systemd/modulr-agent.default", "etc/default/modulr-agent", "644"],
]
conf-files = ["/etc/default/modulr-agent"]
