[package]
name = "modulr_zenoh_interface"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.0"
log = "0.4.29"
serde = "1.0.228"
zenoh = "1.7.1"
modulr_ros_messages = { path = "../modulr_ros_messages" }
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.17"
cdr = "0.2.4"

[dev-dependencies]
env_logger = "0.11"
